@@ -1,4 +1,4 @@
 ;; Automatically generated file (don't edit)
 (module tools_date (export (bigloo-date)))
 
-(define (bigloo-date)  " Thu Mar 11 09:56:13 CET 2010 ")
+(define (bigloo-date)  " Thu Mar 11 10:07:12 CET 2010 ")
